rearrange the skills and education section

--- a/Aug 2025/Resume_Template_fixed.tex
+++ b/Aug 2025/Resume_Template_fixed.tex
@@ -13,38 +13,31 @@
 \begin{center}
     \textbf{\LARGE \MakeUppercase{Ajay Nehra}} \\
     \vspace{1mm}
-    % \href{mailto:nehra.ajay.2014@gmail.com}{nehra.ajay.2014@gmail.com} \hspace{5mm} (+91)-9997272281 \hspace{5mm} \faMapMarker \,  Gurgaon
     \href{mailto:nehra.ajay.2014@gmail.com}{nehra.ajay.2014@gmail.com} \hspace{5mm}
-    % \href{https://www.linkedin.com/in/ajay-n-575bba23/}{LinkedIn} \hspace{5mm}
-    % \href{https://www.linkedin.com/in/ajay-n-575bba23/}{\faLinkedin \, linkedin.com/in/ajay-n-575bba23}
     \href{https://www.linkedin.com/in/ajay-n-575bba23/}{\faLinkedin} \hspace{5mm}
     (+91)-9997272281 \hspace{5mm}
     \faMapMarker \, Gurgaon
-
-    % \href{mailto:nehra.ajay.2014@gmail.com}{nehra.ajay.2014@gmail.com} \hspace{5mm} (+91)-9997272281 \hspace{5mm} \href{https://www.linkedin.com/in/ajay-n-575bba23/}{LinkedIn} \hspace{5mm} \faMapMarker \,  Gurgaon
 \end{center}
 
 \vspace{1mm}
 
-% Senior Data Scientist with 9+ years of experience in design, development and deployment of data-driven solutions across industries and geographies. IIT Kanpur Graduate with a strong foundation in statistics and machine learning
 {\large
 Senior Data Scientist with 10+ years of experience applying ML to pricing, credit‑risk, and payments, delivering 50+ production models for Fortune 500 clients across 15 markets \textbar\ \textbf{IIT Kanpur}
 }
 
 \vspace{1mm}
 
-
 \begin{center}
     \textbf{\LARGE \MakeUppercase{Skills}}\\[-1.2ex]
     \noindent\rule{\textwidth}{0.8pt}
 \end{center}
+
+\noindent
 \begin{tabular}{p{0.48\textwidth} p{0.48\textwidth}}
     \textbf{Programming Languages:} Python, R, SQL, C, Julia & \textbf{Cloud Platforms:} Databricks, Azure, GCP \\
-    \textbf{ML Techniques:} Regression, Classification & \textbf{Data Visualization:} Tableau, R Shiny, Power BI \\
-    \textbf{ML Libraries:} Scikit-learn, PyTorch, & \textbf{MLOps:} Kedro, Git, Docker \\
+    \textbf{ML Techniques:} Mixed Models, XGBoost, Regression, Classification ,Random Forest, K-means clustering & \textbf{ML Libraries:} Scikit-learn, PyTorch, Pandas, NumPy, Statsmodels, Matplotlib, PyMC\\
+    \textbf{Data Visualization:} Tableau, R Shiny, Power BI & \textbf{MLOps:} Kedro, Git, Docker \\
 \end{tabular}
-
-
 
 \vspace{1mm}
 \begin{center}
@@ -59,13 +52,11 @@ Senior Data Scientist with 10+ years of experience applying ML to pricing, credi
 \textbf{McKinsey \& Company} & \faMapMarker \, Gurgaon \\
 \end{tabular*}
 \begin{itemize}[itemsep=1pt, topsep=0pt]
-    \item Engineered an end-to-end modeling pipeline using linear mixed-effects models to estimate elasticities across car models and geographies, enabling optimized budget allocation and driving a 7\% uplift in sales.
-    \item Developed high-performance data products to derive revenue growth and promotion planning for Fortune 500 clients by integrating econometrics, machine learning techniques, time-series models, and statistics.
-    \item Translated ambiguous business objectives into structured analytical problems and delivered actionable insights that directly influenced product and investment decisions across CPG and automotive clients.
-    \item Worked closely with product managers and engineering teams to embed models into decision workflows, ensuring technical robustness, stakeholder alignment, and successful adoption across global client teams.
-    \item Mentored 10+ junior data scientists; reviewed code, validated models, and standardized pipeline development using Kedro.
+   \item Architected a price‑elasticity pipeline with mixed‑effects models for 3\,000\,+ SKUs in 10 countries; Pyomo optimisation re‑allocated a \$XX~M promo budget, lifting pilot‑market sales 7~\% and promo ROI 15~\%.
+   \item Built an XGBoost promotion‑lift model mapping 40\,+ promo attributes to expected volume; scenario simulator cut forecast error 25\% and now guides quarterly calendars across all regions.
+   \item Imputed coefficients for low‑volume / new SKUs with Random‑Forest ensembles, eliminating 90\,\% of manual overrides and enabling fully automated optimisation runs.
+   \item Productionised the stack—Kedro‑orchestrated Spark jobs on Azure/GCP—so new geographies go live in <$\!$4 weeks; mentored 10\,+ data scientists and rolled out firm‑wide validation templates.
 \end{itemize}
-
 
 % IND-Money
 \noindent
@@ -97,11 +88,9 @@ Senior Data Scientist with 10+ years of experience applying ML to pricing, credi
 \textbf{MasterCard Advisors} & \faMapMarker \, Gurgaon \\
 \end{tabular*}
 \begin{itemize}[itemsep=1pt, topsep=0pt]
-    \item Built machine learning pipelines using Spark and Hadoop to process Mastercard’s large-scale transaction data, enabling k-means clustering and decision tree models that drove targeted bank and merchant strategies.
-
+    \item Built machine learning pipelines using Spark and Hadoop to process Mastercard's large-scale transaction data, enabling k-means clustering and decision tree models that drove targeted bank and merchant strategies.
     \item Improved customer acquisition by identifying high-propensity segments and optimizing targeting across banking partners, resulting in a 10\% uplift in engagement and 30\% reduction in acquisition cost.
-
-    \item Co-inventor on eight patent applications, including one granted and active—enabling real-time delivery rerouting based on user bids and location triggers: \href{https://patents.google.com/patent/US20180349851A1/en?inventor=Ajay+Nehra}{US20180349851A1}.
+   % \item Co-inventor on eight patent applications, including one granted and active—enabling real-time delivery rerouting based on user bids and location triggers: \href{https://patents.google.com/patent/US20180349851A1/en?inventor=Ajay+Nehra}{US20180349851A1}.
 \end{itemize}
 
 % Fractal Analytics
@@ -114,9 +103,7 @@ Senior Data Scientist with 10+ years of experience applying ML to pricing, credi
     \item Built marketing mix models using linear regression and optimized marketing spend, achieving 8\% higher lift.
     \item Created dashboards and reports in RShiny to visualize portfolio performance and support strategic decision-making.
     \item Collaborated with client teams to embed model outputs into budget planning workflows and strategic reviews.
-
 \end{itemize}
-
 
 \vspace{1mm}
 \begin{center}
